# buildpacks

./: .bazelrc  .gcloudignore  .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  GEMINI.md  IMAGE_COMPRESSION.md  LICENSE  OWNERS_FUNCTIONS  Pack1  README.md  WORKSPACE  go.mod  go.sum  java_graalvm_native_image.md  run_gemini_and_create_pr.py  validate.py
builders/: BUILD.bazel
builders/dotnet/: BUILD.bazel  README.md  builder.toml  builder.toml.template  builder_using_runner.toml.template
builders/dotnet/acceptance/: BUILD.bazel  args.bzl  common_test.go  config.yaml  flex_test.go  gae_test.go  gcf_test.go  gcp_test.go  runtime.bzl
builders/dotnet/runner/: BUILD.bazel  main.go
builders/firebase/apphosting/: BUILD.bazel  README.md  builder.toml  firebase.apphosting.22.builder.toml
builders/gae/dotnet3/: BUILD.bazel  builder.toml
builders/gae/go111/: BUILD.bazel  builder.toml
builders/gae/go112/: BUILD.bazel  builder.toml
builders/gae/go113/: BUILD.bazel  builder.toml
builders/gae/go114/: BUILD.bazel  builder.toml
builders/gae/go115/: BUILD.bazel  builder.toml
builders/gae/go116/: BUILD.bazel  builder.toml
builders/gae/java11/: BUILD.bazel  builder.toml
builders/gae/java17/: BUILD.bazel  builder.toml
builders/gae/nodejs10/: BUILD.bazel  builder.toml
builders/gae/nodejs12/: BUILD.bazel  builder.toml
builders/gae/nodejs14/: BUILD.bazel  builder.toml
builders/gae/nodejs16/: BUILD.bazel  builder.toml
builders/gae/php72/: BUILD.bazel  builder.toml
builders/gae/php73/: BUILD.bazel  builder.toml
builders/gae/php74/: BUILD.bazel  builder.toml
builders/gae/php81/: BUILD.bazel  builder.toml
builders/gae/python310/: BUILD.bazel  builder.toml
builders/gae/python37/: BUILD.bazel  builder.toml
builders/gae/python38/: BUILD.bazel  builder.toml
builders/gae/python39/: BUILD.bazel  builder.toml
builders/gae/ruby25/: BUILD.bazel  builder.toml
builders/gae/ruby26/: BUILD.bazel  builder.toml
builders/gae/ruby27/: BUILD.bazel  builder.toml
builders/gae/ruby30/: BUILD.bazel  builder.toml
builders/gcf/dotnet3/: BUILD.bazel  builder.toml
builders/gcf/go111/: BUILD.bazel  builder.toml
builders/gcf/go113/: BUILD.bazel  builder.toml
builders/gcf/go116/: BUILD.bazel  builder.toml
builders/gcf/java11/: BUILD.bazel  builder.toml
builders/gcf/java17/: BUILD.bazel  builder.toml
builders/gcf/nodejs10/: BUILD.bazel  builder.toml
builders/gcf/nodejs12/: BUILD.bazel  builder.toml
builders/gcf/nodejs8/: BUILD.bazel  (+1 more)
builders/go/: BUILD.bazel  README.md  builder.toml  builder.toml.template  builder_using_runner.toml.template
builders/java/: BUILD.bazel  README.md  builder.toml  builder.toml.template  builder_using_runner.toml.template
builders/nodejs/: BUILD.bazel  README.md  builder.toml  builder.toml.template  builder_using_runner.toml.template
builders/php/: BUILD.bazel  README.md  builder.toml  builder.toml.template  builder_using_runner.toml.template
builders/python/: BUILD.bazel  README.md  builder.toml  builder.toml.template  builder_using_runner.toml.template
builders/ruby/: BUILD.bazel  README.md  builder.toml  builder.toml.template  builder_using_runner.toml.template
builders/testdata/: BUILD.bazel
buildpackages/java/: BUILD.bazel  README.md  buildpack.toml
cmd/dotnet/: BUILD.bazel  buildpack.toml
cmd/go/: BUILD.bazel  buildpack.toml
internal/acceptance/: BUILD.bazel  acceptance.go  acceptance_test.go  args.bzl  defs.bzl  environment.go  structure.go  structure_test.go
internal/buildpacktest/: BUILD.bazel  buildpacktest.go
internal/buildpacktestenv/: BUILD.bazel  buildpacktestenv.go
internal/checktools/: BUILD.bazel  checktools.go
internal/fakesecretmanager/: BUILD.bazel  fakesecretmanager.go
internal/mockprocess/: BUILD.bazel  mockprocess.go
internal/testserver/: BUILD.bazel  testserver.go
licenses/: BUILD.bazel  licenses.yaml  lifecycle-v0.7.5.yaml
licenses/buildpacks/: licenses.yaml
licenses/lifecycle-v0.10.2/: licenses.yaml
licenses/lifecycle-v0.13.1/: licenses.yaml
licenses/lifecycle-v0.13.3/: licenses.yaml
licenses/lifecycle-v0.15.1/: licenses.yaml
licenses/lifecycle-v0.16.3/: licenses.yaml
licenses/lifecycle-v0.17.3/: licenses.yaml
licenses/lifecycle-v0.17.4/: licenses.yaml
licenses/lifecycle-v0.17.7/: licenses.yaml
licenses/lifecycle-v0.20.20/: licenses.yaml
licenses/lifecycle-v0.20.5/: licenses.yaml
licenses/lifecycle-v0.21.12/: licenses.yaml
licenses/lifecycle-v0.21.8/: licenses.yaml
licenses/lifecycle-v0.7.4/: licenses.yaml
licenses/lifecycle-v0.9.0/: licenses.yaml
licenses/lifecycle-v0.9.2/: licenses.yaml
pkg/acceptance/: BUILD.bazel  acceptance.go  structure.go  structure_test.go
pkg/appengine/: BUILD.bazel  appengine.go  appengine_test.go
pkg/appstart/: BUILD.bazel  appstart.go
pkg/appyaml/: BUILD.bazel  appyaml.go  appyaml_test.go
pkg/ar/: BUILD.bazel  ar.go  ar_test.go
pkg/buildererror/: BUILD.bazel  error.go  error_test.go  status.go  status_test.go
pkg/buildermetadata/: BUILD.bazel  buildermetadata.go  buildermetadata_test.go
pkg/buildermetrics/: BUILD.bazel  buildermetrics.go  buildermetrics_test.go  counter.go  counter_test.go  counterids.go  counterids_test.go  descriptor.go  descriptor_test.go  descriptors.go  descriptors_test.go  floatdp.go  floatdp_test.go  floatdpids.go  floatdpids_test.go  legacymetric.go  legacymetric_test.go  metricfield.go  metricfield_test.go  metricids.go
tools/: BUILD.bazel  buildpack-package.sh  buildpack.toml.template  check-dependencies.sh  create-builder.sh  create-buildpackage.sh  create-package-toml.sh  defs.bzl  generate_flatten_flag.sh  pull-images.sh  update-licenses.sh
tools/bigquery_transform/: BUILD.bazel  transformation.js  transformation_test.js
tools/checktools/: BUILD.bazel  main.go  main_test.go
tools/cloudbuild/: Dockerfile  ar_hostnames.txt  create_builder.yaml  create_dev_firebase_builder.yaml  create_stacks.yaml  diff_licenses.yaml  merge_using_gerrit.yaml  validate_tests.yaml
tools/licenses/: add.sh  diff.sh  gather.sh  yaml.sh
tools/publisher/: BUILD.bazel  publisher.go
(+2353 files in other folders)
