load("@bazel_gazelle//:def.bzl", "gazelle")
load("//tools/build_defs/license:license.bzl", "license")

# Google Cloud Platform Buildpacks
package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    package_name = "gcp_buildpacks",
)

licenses(["notice"])

exports_files(["LICENSE"])

# gazelle:prefix https://github.com/GoogleCloudPlatform/buildpacks
gazelle(name = "gazelle")
