load("@bazel_gazelle//:def.bzl", "gazelle")
load("//tools/build_defs/license:license.bzl", "license")

# Google Cloud Platform Buildpacks
package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

# gazelle:prefix https://github.com/GoogleCloudPlatform/buildpacks
gazelle(name = "gazelle")
