# Defines a set of groups for builders that support particular language runtimes
licenses(["notice"])

exports_files(
    ["testdata"],
)

package_group(
    name = "cpp_builders",
    packages = [
        "//builders/gcp/base",
    ],
)

package_group(
    name = "dart_builders",
    packages = [
        "//builders/gcp/base",
    ],
)

package_group(
    name = "dotnet_builders",
    packages = [
        "//builders/dotnet",
        "//builders/gcp/base",
    ],
)

package_group(
    name = "go_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/go",
    ],
)

package_group(
    name = "java_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/java",
    ],
)

package_group(
    name = "nodejs_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/nodejs",
    ],
)

package_group(
    name = "php_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/php",
    ],
)

package_group(
    name = "python_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/python",
    ],
)

package_group(
    name = "ruby_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/ruby",
    ],
)
