# Defines a set of groups for builders that support particular language runtimes
licenses(["notice"])

exports_files(
    ["testdata"],
)

package_group(
    name = "cpp_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
    ],
)

package_group(
    name = "dart_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
    ],
)

package_group(
    name = "dotnet_builders",
    packages = [
        "//builders/dotnet",
        "//builders/dotnet/runner",
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
    ],
)

package_group(
    name = "go_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
        "//builders/go",
        "//builders/go/runner",
    ],
)

package_group(
    name = "java_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
        "//builders/java",
        "//builders/java/runner",
    ],
)

package_group(
    name = "nodejs_builders",
    packages = [
        "//builders/firebase/apphosting",
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
        "//builders/nodejs",
        "//builders/nodejs/runner",
    ],
)

package_group(
    name = "php_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
        "//builders/php",
        "//builders/php/runner",
    ],
)

package_group(
    name = "python_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
        "//builders/python",
        "//builders/python/runner",
    ],
)

package_group(
    name = "ruby_builders",
    packages = [
        "//builders/gcp/base",
        "//builders/gcp/base/runner",
        "//builders/ruby",
        "//builders/ruby/runner",
    ],
)
