load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

exports_files([
    "buildpacks/licenses.yaml",
    "lifecycle-v0.21.3/licenses.yaml",
])

pkg_tar(
    name = "licenses",
    srcs = glob(["**/licenses.yaml"]),
    extension = "tar",
    strip_prefix = ".",
)

filegroup(
    name = "files",
    srcs = glob(["**"]),
)
