licenses(["notice"])

package(
    default_visibility = ["//:__subpackages__"],
)

exports_files([
    "defs.bzl",
])

# Used in builder macro in defs.bzl.
sh_binary(
    name = "create_builder",
    srcs = ["create-builder.sh"],
)

sh_binary(
    name = "pull_images",
    srcs = ["pull-images.sh"],
)
