licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

exports_files([
    "defs.bzl",
    "buildpack.toml.template",
    "generate_flatten_flag.sh",
])

# Used in builder macro in defs.bzl.
sh_binary(
    name = "create_builder",
    srcs = ["create-builder.sh"],
)

sh_binary(
    name = "create_buildpackage",
    srcs = ["create-buildpackage.sh"],
)

sh_binary(
    name = "generate_flatten_flag",
    srcs = ["generate_flatten_flag.sh"],
)

sh_binary(
    name = "pull_images",
    srcs = ["pull-images.sh"],
)
