load("//tools:defs.bzl", "builder")

package(default_visibility = ["//builders/dotnet:__subpackages__"])

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/config/flex:flex.tgz",
        "//cmd/dotnet/appengine:appengine.tgz",
        "//cmd/dotnet/appengine_main:appengine_main.tgz",
        "//cmd/dotnet/functions_framework:functions_framework.tgz",
        "//cmd/dotnet/publish:publish.tgz",
        "//cmd/dotnet/runtime:runtime.tgz",
        "//cmd/dotnet/sdk:sdk.tgz",
        "//cmd/utils/archive_source:archive_source.tgz",
        "//cmd/utils/label:label_image.tgz",
    ],
    groups = {
        "dotnet": [
            "//cmd/dotnet/flex:flex.tgz",
        ],
    },
    image = "gcp/dotnet",
)
