load("//tools:defs.bzl", "builder")

package(default_visibility = ["//builders/go:__subpackages__"])

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/config/flex:flex.tgz",
        "//cmd/go/appengine:appengine.tgz",
        "//cmd/go/appengine_gomod:appengine_gomod.tgz",
        "//cmd/go/appengine_gopath:appengine_gopath.tgz",
        "//cmd/go/build:build.tgz",
        "//cmd/go/clear_source:clear_source.tgz",
        "//cmd/go/functions_framework:functions_framework.tgz",
        "//cmd/go/gomod:gomod.tgz",
        "//cmd/go/gopath:gopath.tgz",
        "//cmd/go/legacy_worker:legacy_worker.tgz",
        "//cmd/go/runtime:runtime.tgz",
        "//cmd/utils/archive_source:archive_source.tgz",
        "//cmd/utils/label:label.tgz",
    ],
    image = "gcp/go",
)
