load("//tools:defs.bzl", "builder")

package(default_visibility = ["//builders/nodejs:__subpackages__"])

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/config/flex:flex.tgz",
        "//cmd/nodejs/appengine:appengine.tgz",
        "//cmd/nodejs/functions_framework:functions_framework.tgz",
        "//cmd/nodejs/legacy_worker:legacy_worker.tgz",
        "//cmd/nodejs/npm:npm.tgz",
        "//cmd/nodejs/runtime:runtime.tgz",
        "//cmd/nodejs/yarn:yarn.tgz",
        "//cmd/utils/archive_source:archive_source.tgz",
        "//cmd/utils/label:label_image.tgz",
    ],
    image = "gcp/nodejs",
)
