load("//tools:defs.bzl", "builder")

package(default_visibility = ["//builders/php/acceptance:__pkg__"])

licenses(["notice"])

exports_files([
    "builder.toml.template",
])

BUILDPACKS = [
    "//cmd/config/entrypoint:entrypoint.tgz",
    "//cmd/config/flex:flex.tgz",
    "//cmd/php/appengine:appengine.tgz",
    "//cmd/php/composer:composer.tgz",
    "//cmd/php/composer_gcp_build:composer_gcp_build.tgz",
    "//cmd/php/functions_framework:functions_framework.tgz",
    "//cmd/php/cloudfunctions:cloudfunctions.tgz",
    "//cmd/php/composer_install:composer_install.tgz",
    "//cmd/php/runtime:runtime.tgz",
    "//cmd/php/webconfig:webconfig.tgz",
    "//cmd/utils/archive_source:archive_source.tgz",
    "//cmd/utils/label:label_image.tgz",
    "//cmd/utils/nginx:nginx.tgz",
]

GROUPS = {
    "php": [
        "//cmd/php/supervisor:supervisor.tgz",
    ],
    "python": [
        "//cmd/python/runtime:runtime.tgz",
    ],
}

BUILDPACKS_USING_RUNNER = [
    "//cmd/config/entrypoint:entrypoint_using_runner.tgz",
    "//cmd/config/flex:flex_using_runner.tgz",
    "//cmd/php/appengine:appengine_using_runner.tgz",
    "//cmd/php/composer:composer_using_runner.tgz",
    "//cmd/php/composer_gcp_build:composer_gcp_build_using_runner.tgz",
    "//cmd/php/functions_framework:functions_framework_using_runner.tgz",
    "//cmd/php/cloudfunctions:cloudfunctions_using_runner.tgz",
    "//cmd/php/composer_install:composer_install_using_runner.tgz",
    "//cmd/php/runtime:runtime_using_runner.tgz",
    "//cmd/php/webconfig:webconfig_using_runner.tgz",
    "//cmd/utils/archive_source:archive_source_using_runner.tgz",
    "//cmd/utils/label:label_image_using_runner.tgz",
    "//cmd/utils/nginx:nginx_using_runner.tgz",
]

GROUPS_USING_RUNNER = {
    "php": [
        "//cmd/php/supervisor:supervisor_using_runner.tgz",
    ],
    "python": [
        "//cmd/python/runtime:runtime_using_runner.tgz",
    ],
}

builder(
    name = "builder",
    builder_template = ":builder.toml.template",
    buildpacks = BUILDPACKS,
    descriptor = "builder.toml",
    groups = GROUPS,
    image = "gcp/php",
    stack = "google.gae.18",
)

builder(
    name = "builder_using_runner",
    builder_template = ":builder_using_runner.toml.template",
    buildpacks = BUILDPACKS_USING_RUNNER,
    descriptor = "builder.toml",
    groups = GROUPS_USING_RUNNER,
    image = "gcp/php-runner",
    stack = "google.gae.18",
)

builder(
    name = "builder_22",
    builder_template = ":builder.toml.template",
    buildpacks = BUILDPACKS,
    descriptor = "builder.toml",
    groups = GROUPS,
    image = "gcp/php-22",
    stack = "google.gae.22",
)

builder(
    name = "builder_24",
    builder_template = ":builder.toml.template",
    buildpacks = BUILDPACKS,
    descriptor = "builder.toml",
    groups = GROUPS,
    image = "gcp/php-24",
    stack = "google.24.full",
)
