load("//tools:defs.bzl", "builder")

package(default_visibility = ["//builders/ruby:__subpackages__"])

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/ruby/missing_entrypoint:missing_entrypoint.tgz",
        "//cmd/ruby/appengine_validation:appengine_validation.tgz",
        "//cmd/ruby/appengine:appengine.tgz",
        "//cmd/ruby/rubygems:rubygems.tgz",
        "//cmd/ruby/bundle:bundle.tgz",
        "//cmd/ruby/rails:rails.tgz",
        "//cmd/ruby/runtime:runtime.tgz",
        "//cmd/utils/label:label_image.tgz",
        "//cmd/ruby/functions_framework:functions_framework.tgz",
        "//cmd/utils/archive_source:archive_source.tgz",
    ],
    groups = {
        "nodejs": [
            "//cmd/nodejs/runtime:runtime.tgz",
            "//cmd/nodejs/yarn:yarn.tgz",
        ],
    },
    image = "gcp/ruby",
)
