load("//tools:defs.bzl", "builder")

package(default_visibility = ["//builders/ruby:__subpackages__"])

licenses(["notice"])

exports_files([
    "builder.toml.template",
])

BUILDPACKS = [
    "//cmd/config/entrypoint:entrypoint.tgz",
    "//cmd/config/flex:flex.tgz",
    "//cmd/ruby/missing_entrypoint:missing_entrypoint.tgz",
    "//cmd/ruby/appengine_validation:appengine_validation.tgz",
    "//cmd/ruby/appengine:appengine.tgz",
    "//cmd/ruby/flex_entrypoint:flex_entrypoint.tgz",
    "//cmd/ruby/rubygems:rubygems.tgz",
    "//cmd/ruby/bundle:bundle.tgz",
    "//cmd/ruby/rails:rails.tgz",
    "//cmd/ruby/runtime:runtime.tgz",
    "//cmd/utils/label:label_image.tgz",
    "//cmd/ruby/functions_framework:functions_framework.tgz",
    "//cmd/utils/archive_source:archive_source.tgz",
]

GROUPS = {
    "nodejs": [
        "//cmd/nodejs/runtime:runtime.tgz",
        "//cmd/nodejs/yarn:yarn.tgz",
    ],
}

BUILDPACKS_USING_RUNNER = [
    "//cmd/config/entrypoint:entrypoint_using_runner.tgz",
    "//cmd/config/flex:flex_using_runner.tgz",
    "//cmd/ruby/missing_entrypoint:missing_entrypoint_using_runner.tgz",
    "//cmd/ruby/appengine_validation:appengine_validation_using_runner.tgz",
    "//cmd/ruby/appengine:appengine_using_runner.tgz",
    "//cmd/ruby/flex_entrypoint:flex_entrypoint_using_runner.tgz",
    "//cmd/ruby/rubygems:rubygems_using_runner.tgz",
    "//cmd/ruby/bundle:bundle_using_runner.tgz",
    "//cmd/ruby/rails:rails_using_runner.tgz",
    "//cmd/ruby/runtime:runtime_using_runner.tgz",
    "//cmd/utils/label:label_image_using_runner.tgz",
    "//cmd/ruby/functions_framework:functions_framework_using_runner.tgz",
    "//cmd/utils/archive_source:archive_source_using_runner.tgz",
]

GROUPS_USING_RUNNER = {
    "nodejs": [
        "//cmd/nodejs/runtime:runtime_using_runner.tgz",
        "//cmd/nodejs/yarn:yarn_using_runner.tgz",
    ],
}

builder(
    name = "builder",
    builder_template = ":builder.toml.template",
    buildpacks = BUILDPACKS,
    descriptor = "builder.toml",
    groups = GROUPS,
    image = "gcp/ruby",
    stack = "google.gae.18",
)

builder(
    name = "builder_22",
    builder_template = ":builder.toml.template",
    buildpacks = BUILDPACKS,
    descriptor = "builder.toml",
    groups = GROUPS,
    image = "gcp/ruby-22",
    stack = "google.gae.22",
)

builder(
    name = "builder_24",
    builder_template = ":builder.toml.template",
    buildpacks = BUILDPACKS,
    descriptor = "builder.toml",
    groups = GROUPS,
    image = "gcp/ruby-24",
    stack = "google.24.full",
)
